--- a/gym-crop/gym_crop/envs/env_data/agro/agromanagement_fertilization.yaml
+++ b/gym-crop/gym_crop/envs/env_data/agro/agromanagement_fertilization.yaml
@@ -1,7 +1,7 @@
 - 2007-01-01:
     CropCalendar:
-        crop_name: wheat
-        variety_name: winter wheat
+        crop_name: rice
+        variety_name: Rice_IR64
         crop_start_date: 2007-01-01
         crop_start_type: emergence
         crop_end_date: 2007-08-01
