--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.7.1+cpu
+torch==1.8.1
 tensorflow==2.4.0
 stable-baselines3==0.10.0
